Changes
=======

1.0.3.post1 (2018-09-07)
------------------------

This version corrects errors made in building binary wheels for 1.0.3. There
are no bug fixes or new features in this version.

1.0.3 (2018-09-06)
------------------

Bug fixes:

- A regression in GeoJSON source handling in rio-rasterize (#1425) has been
  fixed.
- Rasterization of linear rings (#1431) is now supported.

1.0.2 (2018-07-27)
------------------

Bug fixes:

- The output of calculate_default_transform() can be fixed to output dimensions
  as well as to output resolution (#1409).
- In using rio-warp, the --src-bounds option can now override the bounds of the
  source dataset when --dimensions is used (#1419).
- Bounds of rotated rasters are now calculated correctly (#1422).
- A band indexing bug in reproject() (#1350) has been fixed (#1424).

1.0.1 (2018-07-23)
------------------

Bug fixes:

- Bounding envelopes are densified at higher precision in transform_bounds to
  fix #1411.
- Add LERC compression to enums.Compression (#1412).
- The reproject() function now passes dst_alpha properly to _reproject(), which
  unlocks materialization of warp destination alpha band masks (#1417).
- The --dimensions and --src-bounds options of rio-warp can be used together
  as expected (#1418).

1.0.0 (2018-07-12)
------------------

There have been no changes since release candidate 5.

1.0rc5 (2018-07-09)
-------------------

- C source files are now generated using Cython 0.28.3, which gives us support
  for Python 3.7 (#1404, #1405).

1.0rc4 (2018-07-05)
-------------------

- An integer overflow when multiplying the warp memory limit (#1401) has been
  fixed.

1.0rc3 (2018-07-03)
-------------------

- CRS based EPSG codes can now report that code using a new `to_epsg()` method
  (#1288).
- A regression in rasterio.warp.reproject has been reported (#1395), confirmed,
  and fixed.

1.0rc2 (2018-06-29)
-------------------

Deprecation:

- The rasterio.vfs module has been removed.